added pom file dependencies for Mockito